vlib/v/checker/tests/invalid_const_expr_match_range_err.vv
start := 1
end := 20

match 5 {
	start...10 {
		println(start)
	}
	10...end {
		println(end)
	}
	else {}
}

a := match 5 {
	start...10 {
		2
	}
	10...end {
		3
	}
	else {
		1
	}
}
println(a)
